añadir listado navegacion

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Esta es mi plantilla html</h1>
+    <ul>
+        <li>Descripción</li>
+        <li>Proyectos</li>
+        <li>Contactos</li>
+    </ul>
 </body>
 </html>
