--- a/index.html
+++ b/index.html
@@ -8,11 +8,43 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Esta es mi plantilla html</h1>
+    <!-- <h1 class="cambio">Esta es mi plantilla html</h1>
     <ul>
         <li>Descripción</li>
-        <li>Proyectos</li>
+        <li class="cambio color-aquamarine">Proyectos</li>
         <li>Contactos</li>
     </ul>
+    <h2>Listado</h2>
+    <a href=" ">Enlace a ---- </a>
+    <div>
+        <div>1</div>>
+        <div>Listado</div>
+        <div>3</div>
+    </div> -->
+
+    <!-- <div class="ejemplo">Hola Mundo!</div>
+<div class="caja">
+<div class="seccion-caja"></div>
+<div class="seccion-caja"></div>
+<div class="seccion-caja"></div>
+</div>
+<div>
+    <div class="caja">
+</div>
+</div> -->
+
+<div class="container">
+    <div class="elemento">
+        <div class="circle"></div>
+    </div>
+    <div class="elemento">
+        <div class="circle"></div>
+    </div>
+   
+    <div class="elemento">A</div>
+    <div class="elemento">B</div>
+    
+</div>
+
 </body>
 </html>
